--- a/modules/swagger-codegen/src/main/resources/Java/build.gradle.mustache
+++ b/modules/swagger-codegen/src/main/resources/Java/build.gradle.mustache
@@ -2,20 +2,22 @@ apply plugin: 'idea'
 apply plugin: 'eclipse'
 
 group = '{{groupId}}'
-version = '{{artifactVersion}}'
+project.version = '{{artifactVersion}}'
 
 buildscript {
     repositories {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.5.+'
+        classpath 'com.android.tools.build:gradle:2.2.3'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
     }
 }
 
-repositories {
-    jcenter()
+allprojects {
+    repositories {
+        jcenter()
+    }
 }
 
 
@@ -26,9 +28,9 @@ if(hasProperty('target') && target == 'android') {
     
     android {
         compileSdkVersion 23
-        buildToolsVersion '23.0.2'
+        buildToolsVersion '25.0.2'
         defaultConfig {
-            minSdkVersion 14
+            minSdkVersion 21
             targetSdkVersion 23
         }
         compileOptions {
