--- a/modules/swagger-codegen/src/main/resources/Java/libraries/okhttp-gson/build.gradle.mustache
+++ b/modules/swagger-codegen/src/main/resources/Java/libraries/okhttp-gson/build.gradle.mustache
@@ -9,13 +9,15 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.5.+'
+        classpath 'com.android.tools.build:gradle:2.2.3'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
     }
 }
 
-repositories {
-    jcenter()
+allprojects {
+    repositories {
+        jcenter()
+    }
 }
 
 
@@ -26,9 +28,9 @@ if(hasProperty('target') && target == 'android') {
 
     android {
         compileSdkVersion 23
-        buildToolsVersion '23.0.2'
+        buildToolsVersion '25.0.2'
         defaultConfig {
-            minSdkVersion 14
+            minSdkVersion 21
             targetSdkVersion 23
         }
         compileOptions {
@@ -95,11 +97,11 @@ if(hasProperty('target') && target == 'android') {
 
 dependencies {
     compile 'io.swagger:swagger-annotations:1.5.8'
-    compile 'com.squareup.okhttp:okhttp:2.7.5'
-    compile 'com.squareup.okhttp:logging-interceptor:2.7.5'
+	compile 'com.squareup.okhttp3:okhttp:3.0.1'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.0.1'
     compile 'com.google.code.gson:gson:2.6.2'
     {{^java8}}
-    compile 'joda-time:joda-time:2.9.3'
+    compile 'joda-time:joda-time:2.9.4'
     {{/java8}}
     testCompile 'junit:junit:4.12'
 }
