--- a/modules/swagger-codegen/src/main/resources/csharp/Configuration.mustache
+++ b/modules/swagger-codegen/src/main/resources/csharp/Configuration.mustache
@@ -1,4 +1,3 @@
-{{>partial_header}}
 using System;
 using System.Reflection;
 using System.Collections.Generic;
@@ -11,261 +10,67 @@ namespace {{packageName}}.Client
     /// <summary>
     /// Represents a set of configuration settings
     /// </summary>
-    {{>visibility}} class Configuration
+    public class Configuration
     {
-        /// <summary>
-        /// Initializes a new instance of the Configuration class with different settings
-        /// </summary>
-        /// <param name="apiClient">Api client</param>
-        /// <param name="defaultHeader">Dictionary of default HTTP header</param>
-        /// <param name="username">Username</param>
-        /// <param name="password">Password</param>
-        /// <param name="accessToken">accessToken</param>
-        /// <param name="apiKey">Dictionary of API key</param>
-        /// <param name="apiKeyPrefix">Dictionary of API key prefix</param>
-        /// <param name="tempFolderPath">Temp folder path</param>
-        /// <param name="dateTimeFormat">DateTime format string</param>
-        /// <param name="timeout">HTTP connection timeout (in milliseconds)</param>
-        /// <param name="userAgent">HTTP user agent</param>
-        public Configuration(ApiClient apiClient = null,
-                             Dictionary<String, String> defaultHeader = null,
-                             string username = null,
-                             string password = null,
-                             string accessToken = null,
-                             Dictionary<String, String> apiKey = null,
-                             Dictionary<String, String> apiKeyPrefix = null,
-                             string tempFolderPath = null,
-                             string dateTimeFormat = null,
-                             int timeout = 100000,
-                             string userAgent = "{{#httpUserAgent}}{{.}}{{/httpUserAgent}}{{^httpUserAgent}}Swagger-Codegen/{{packageVersion}}/csharp{{/httpUserAgent}}"
-                            )
-        {
-            setApiClientUsingDefault(apiClient);
-
-            Username = username;
-            Password = password;
-            AccessToken = accessToken;
-            UserAgent = userAgent;
-
-            if (defaultHeader != null)
-                DefaultHeader = defaultHeader;
-            if (apiKey != null)
-                ApiKey = apiKey;
-            if (apiKeyPrefix != null)
-                ApiKeyPrefix = apiKeyPrefix;
-
-            TempFolderPath = tempFolderPath;
-            DateTimeFormat = dateTimeFormat;
-            Timeout = {{#netStandard}}TimeSpan.FromMilliseconds({{/netStandard}}timeout{{#netStandard}}){{/netStandard}};
-        }
-
-        /// <summary>
-        /// Initializes a new instance of the Configuration class.
-        /// </summary>
-        /// <param name="apiClient">Api client.</param>
-        public Configuration(ApiClient apiClient)
-        {
-            setApiClientUsingDefault(apiClient);
-        }
-
+  
         /// <summary>
         /// Version of the package.
         /// </summary>
         /// <value>Version of the package.</value>
         public const string Version = "{{packageVersion}}";
-
-        /// <summary>
-        /// Gets or sets the default Configuration.
-        /// </summary>
-        /// <value>Configuration.</value>
-        public static Configuration Default = new Configuration();
-
-        /// <summary>
-        /// Default creation of exceptions for a given method name and response object
-        /// </summary>
-        public static readonly ExceptionFactory DefaultExceptionFactory = (methodName, response) =>
-        {
-            int status = (int) response.StatusCode;
-            if (status >= 400) return new ApiException(status, String.Format("Error calling {0}: {1}", methodName, response.Content), response.Content);
-            {{^netStandard}}
-            if (status == 0) return new ApiException(status, String.Format("Error calling {0}: {1}", methodName, response.ErrorMessage), response.ErrorMessage);
-            {{/netStandard}}
-            return null;
-        };
-
-        /// <summary>
-        /// Gets or sets the HTTP timeout (milliseconds) of ApiClient. Default to 100000 milliseconds.
-        /// </summary>
-        /// <value>Timeout.</value>
-        public {{^netStandard}}int{{/netStandard}}{{#netStandard}}TimeSpan?{{/netStandard}} Timeout
-        {
-            get { return ApiClient.RestClient.Timeout; }
-
-            set
-            {
-                if (ApiClient != null)
-                    ApiClient.RestClient.Timeout = value;
-            }
-        }
-
+  
         /// <summary>
         /// Gets or sets the default API client for making HTTP calls.
         /// </summary>
         /// <value>The API client.</value>
-        public ApiClient ApiClient;
-
-        /// <summary>
-        /// Set the ApiClient using Default or ApiClient instance.
-        /// </summary>
-        /// <param name="apiClient">An instance of ApiClient.</param>
-        /// <returns></returns>
-        public void setApiClientUsingDefault (ApiClient apiClient = null)
-        {
-            if (apiClient == null)
-            {
-                if (Default != null && Default.ApiClient == null)
-                    Default.ApiClient = new ApiClient();
-
-                ApiClient = Default != null ? Default.ApiClient : new ApiClient();
-            }
-            else
-            {
-                if (Default != null && Default.ApiClient == null)
-                    Default.ApiClient = apiClient;
-
-                ApiClient = apiClient;
-            }
-        }
-
-        private Dictionary<String, String> _defaultHeaderMap = new Dictionary<String, String>();
-
-        /// <summary>
-        /// Gets or sets the default header.
-        /// </summary>
-        public Dictionary<String, String> DefaultHeader
-        {
-            get { return _defaultHeaderMap; }
-
-            set
-            {
-                _defaultHeaderMap = value;
-            }
-        }
-
-        /// <summary>
-        /// Add default header.
-        /// </summary>
-        /// <param name="key">Header field name.</param>
-        /// <param name="value">Header field value.</param>
-        /// <returns></returns>
-        public void AddDefaultHeader(string key, string value)
-        {
-            _defaultHeaderMap[key] = value;
-        }
-
-        /// <summary>
-        /// Add Api Key Header.
-        /// </summary>
-        /// <param name="key">Api Key name.</param>
-        /// <param name="value">Api Key value.</param>
-        /// <returns></returns>
-        public void AddApiKey(string key, string value)
-        {
-            ApiKey[key] = value;
-        }
-
-        /// <summary>
-        /// Sets the API key prefix.
-        /// </summary>
-        /// <param name="key">Api Key name.</param>
-        /// <param name="value">Api Key value.</param>
-        public void AddApiKeyPrefix(string key, string value)
-        {
-            ApiKeyPrefix[key] = value;
-        }
-
-        /// <summary>
-        /// Gets or sets the HTTP user agent.
-        /// </summary>
-        /// <value>Http user agent.</value>
-        public String UserAgent { get; set; }
-
+        public static ApiClient DefaultApiClient = new ApiClient();
+  
         /// <summary>
         /// Gets or sets the username (HTTP basic authentication).
         /// </summary>
         /// <value>The username.</value>
-        public String Username { get; set; }
-
+        public static String Username { get; set; }
+  
         /// <summary>
         /// Gets or sets the password (HTTP basic authentication).
         /// </summary>
         /// <value>The password.</value>
-        public String Password { get; set; }
-
-        /// <summary>
-        /// Gets or sets the access token for OAuth2 authentication.
-        /// </summary>
-        /// <value>The access token.</value>
-        public String AccessToken { get; set; }
-
+        public static String Password { get; set; }
+  
         /// <summary>
         /// Gets or sets the API key based on the authentication name.
         /// </summary>
         /// <value>The API key.</value>
-        public Dictionary<String, String> ApiKey = new Dictionary<String, String>();
-
+        public static Dictionary<String, String> ApiKey = new Dictionary<String, String>();
+  
         /// <summary>
         /// Gets or sets the prefix (e.g. Token) of the API key based on the authentication name.
         /// </summary>
         /// <value>The prefix of the API key.</value>
-        public Dictionary<String, String> ApiKeyPrefix = new Dictionary<String, String>();
-
-        /// <summary>
-        /// Get the API key with prefix.
-        /// </summary>
-        /// <param name="apiKeyIdentifier">API key identifier (authentication scheme).</param>
-        /// <returns>API key with prefix.</returns>
-        public string GetApiKeyWithPrefix (string apiKeyIdentifier)
-        {
-            var apiKeyValue = "";
-            ApiKey.TryGetValue (apiKeyIdentifier, out apiKeyValue);
-            var apiKeyPrefix = "";
-            if (ApiKeyPrefix.TryGetValue (apiKeyIdentifier, out apiKeyPrefix))
-                return apiKeyPrefix + " " + apiKeyValue;
-            else
-                return apiKeyValue;
-        }
-
-        private string _tempFolderPath;
-
+        public static Dictionary<String, String> ApiKeyPrefix = new Dictionary<String, String>();
+  
+        private static string _tempFolderPath = Path.GetTempPath();
+  
         /// <summary>
         /// Gets or sets the temporary folder path to store the files downloaded from the server.
         /// </summary>
         /// <value>Folder path.</value>
-        public String TempFolderPath
+        public static String TempFolderPath
         {
-            get
-            {
-                // default to Path.GetTempPath() if _tempFolderPath is not set
-                if (String.IsNullOrEmpty(_tempFolderPath))
-                {
-                    _tempFolderPath = Path.GetTempPath();
-                }
-                return _tempFolderPath;
-            }
-
-            set
+            get { return _tempFolderPath; }
+  
+            set 
             {
                 if (String.IsNullOrEmpty(value))
                 {
                     _tempFolderPath = value;
                     return;
                 }
-
+      
                 // create the directory if it does not exist
-                if (!Directory.Exists(value))
+                if (!Directory.Exists(value)) 
                     Directory.CreateDirectory(value);
-
+      
                 // check if the path contains directory separator at the end
                 if (value[value.Length - 1] == Path.DirectorySeparatorChar)
                     _tempFolderPath = value;
@@ -276,7 +81,7 @@ namespace {{packageName}}.Client
 
         private const string ISO8601_DATETIME_FORMAT = "o";
 
-        private string _dateTimeFormat = ISO8601_DATETIME_FORMAT;
+        private static string _dateTimeFormat = ISO8601_DATETIME_FORMAT;
 
         /// <summary>
         /// Gets or sets the the date time format used when serializing in the ApiClient
@@ -286,7 +91,7 @@ namespace {{packageName}}.Client
         /// No validation is done to ensure that the string you're providing is valid
         /// </summary>
         /// <value>The DateTimeFormat string</value>
-        public String DateTimeFormat
+        public static String DateTimeFormat
         {
             get
             {
@@ -312,22 +117,15 @@ namespace {{packageName}}.Client
         /// </summary>
         public static String ToDebugReport()
         {
-            String report = "C# SDK ({{{packageName}}}) Debug Report:\n";
-            {{^netStandard}}
-            {{^supportsUWP}}
+            String report = "C# SDK ({{packageName}}) Debug Report:\n";
             report += "    OS: " + Environment.OSVersion + "\n";
             report += "    .NET Framework Version: " + Assembly
                      .GetExecutingAssembly()
                      .GetReferencedAssemblies()
                      .Where(x => x.Name == "System.Core").First().Version.ToString()  + "\n";
-            {{/supportsUWP}}
-            {{/netStandard}}
-            {{#netStandard}}
-            report += "    OS: " + System.Runtime.InteropServices.RuntimeInformation.OSDescription + "\n";
-            {{/netStandard}}
-            report += "    Version of the API: {{{version}}}\n";
-            report += "    SDK Package Version: {{{packageVersion}}}\n";
-
+            report += "    Version of the API: {{version}}\n";
+            report += "    SDK Package Version: {{packageVersion}}\n";
+  
             return report;
         }
     }
