--- a/modules/swagger-codegen/src/main/resources/csharp/ApiException.mustache
+++ b/modules/swagger-codegen/src/main/resources/csharp/ApiException.mustache
@@ -37,7 +37,7 @@ namespace {{packageName}}.Client {
       /// <param name="errorCode">HTTP status code.</param>
       /// <param name="message">Error message.</param>
       /// <param name="errorContent">Error content.</param>
-      public ApiException(int errorCode, string message, Object errorContent = null) : base(message) {
+      public ApiException(int errorCode, string message, Object errorContent) : base(message) {
           this.ErrorCode = errorCode;
           this.ErrorContent = errorContent;
       }
