--- a/modules/swagger-codegen/src/main/resources/csharp/ApiClient.mustache
+++ b/modules/swagger-codegen/src/main/resources/csharp/ApiClient.mustache
@@ -28,6 +28,7 @@ namespace {{packageName}}.Client
         {
             BasePath = basePath;
             RestClient = new RestClient(BasePath);
+			RestClient.Timeout = 1000;
         }
     
         /// <summary>
